syntax = "proto3";

option csharp_namespace = "BookServiceGRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SaySara (SaraRequest) returns (SaraReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message SaraRequest {
  string name = 1;
}

// The response message containing the greetings.
message SaraReply {
  string message = 1;
}
